# EzPC

./: bert.py  verify_softmax_v.py
SCI/: CMakeLists.txt  Dockerfile  compare_result.py
SCI/cmake/: SCIConfig.cmake
SCI/src/: CMakeLists.txt  library_float.h  library_float_secfloat.cpp
SCI/src/FloatingPoint/: bool-data.h  fixed-point.cpp  fixed-point.h  fp-math.cpp  fp-math.h
SCI/src/LinearHE/: CMakeLists.txt  bert-att-ct-pt.cpp  bert-att-ct-pt.h  bert-att-output.cpp  bert-att-output.h  bert-ct-pt-inter1.cpp  bert-ct-pt-inter1.h  bert-ct-pt-inter2.cpp  bert-ct-pt-inter2.h  bert-ct-pt-single.cpp.back  bert-ct-pt.cpp  bert-ct-pt.cpp.back  bert-ct-pt.h  bert-layernorm.cpp  bert-layernorm.h  bert-linear1-inputprune.cpp  bert-linear1-inputprune.h  bert-matmul-16384.cpp  bert-matmul-16384.h  bert-matmul-cipher-efficient-seal-ckks.cpp  bert-matmul-cipher-efficient-seal-ckks.h  bert-matmul-cipher-efficient-seal.cpp  bert-matmul-cipher-efficient-seal.cpp.bak  bert-matmul-cipher-efficient-seal.h  bert-matmul-cipher-efficient.cpp  bert-matmul-cipher-efficient.h  bert-matmul.cpp  bert-matmul.h  conv-field.cpp  conv-field.h  elemwise-prod-field.cpp  enc_search.cpp  enc_search.h  fc-field.cpp  fc-field.h  iron-att-linear.cpp  iron-att-linear.h  iron-seal-inter1.cpp  iron-seal-inter1.h  iron-seal.cpp  (+7 more)
SCI/src/LinearOT/: linear-ot.cpp  linear-ot.h
SCI/src/Math/: math-functions.cpp  math-functions.h
SCI/tests/: CMakeLists.txt  test_att_ct_pt.cpp  test_bert_ctpt.cpp  test_bert_ctpt_attoutput.cpp  test_bert_ctpt_inter1.cpp  test_bert_ctpt_inter2.cpp  test_bert_efficient.cpp  test_bert_efficient_seal.cpp  test_bert_efficient_seal_ckks.cpp  test_bert_iron.cpp  test_bert_iron_inter1.cpp  test_bert_layernorm.cpp  test_bert_matmul_16384.cpp  test_bert_matmul_seal.cpp  test_floatml_softmax.cpp  test_linear1_inputprune.cpp  test_ring_matmul.cpp  test_search_inner_product.cpp
SCI/tests/activation/: CMakeLists.txt  bolt_gelu.cpp  iron_gelu.cpp  iron_layer_norm.cpp  iron_softmax.cpp  ppnlp_gelu.cpp  ppnlp_layer_norm.cpp  ppnlp_softmax.cpp
SCI/tests/bert/: CMakeLists.txt  bert.cpp  bert.h  bert_utils.cpp  bert_utils.h  he.cpp  he.h  linear.cpp  linear.h  matrix_utils.cpp  matrix_utils.h  nonlinear.cpp  nonlinear.h  ppnlp_bert.cpp  ppnlp_bert_prune.cpp
SCI/tests/bert_bolt/: CMakeLists.txt
SCI/tests/bert_iron/: CMakeLists.txt  bert.cpp  bert.h  bert_utils.cpp  he.cpp  he.h  iron_bert.cpp  linear.cpp  linear.h  matrix_utils.cpp  matrix_utils.h  nonlinear.cpp
result/iron/: mrpc.txt  rte.txt  sst-2.txt  sts-b.txt
result/quantize/: mrpc.txt  rte.txt  sst-2.txt  sts-b.txt
results/pruning/: sst-2.txt
